--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lithaku Edu – The Loony Hypochondriacs</title>
+  <title>Lithako Edu – The Loony Hypochondriacs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap');
-
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -23,7 +22,7 @@
     }
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.2rem;
     }
     .hero {
       padding: 2rem 1rem;
@@ -77,29 +76,159 @@
       font-size: 0.9rem;
     }
     .countdown-box {
-      font-size: 1.25rem;
+      font-size: 1.1rem;
       font-weight: bold;
       text-align: center;
       margin: 0 auto;
+      font-family: 'Poppins', sans-serif;
     }
     #countdown span {
       display: inline-block;
       min-width: 80px;
-      margin: 0 10px;
-      font-size: 1.2rem;
+      margin: 5px;
+      font-size: 1rem;
       background: #005fa3;
       color: white;
       padding: 0.5rem 1rem;
       border-radius: 8px;
     }
+    summary {
+      font-weight: bold;
+      font-size: 1.1rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+    }
+    summary::marker {
+      content: \"\\25BC \";
+      font-size: 1rem;
+      color: #005fa3;
+    }
     @media (max-width: 600px) {
       .hero img {
         max-width: 90%;
+      }
+      #countdown span {
+        min-width: 70px;
+        font-size: 0.95rem;
       }
     }
   </style>
 </head>
 <body>
-  <!-- existing body content remains unchanged -->
+  <header>
+    <h1>Lithako Edu</h1>
+    <p>Pre-order <em>The Loony Hypochondriacs</em> Today</p>
+  </header>
+
+  <section class="hero">
+    <img src="tlh-cover.jpg" alt="The Loony Hypochondriacs Book Cover">
+    <br>
+    <button onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">Pre-order Now</button>
+  </section>
+
+  <section class="section">
+    <h2>About the Book</h2>
+    <p>Welcome to <strong>Hypercondria™</strong> — a flawless, medically optimized town where not having a disorder is the ultimate red flag.</p>
+    <p>Here, wellness is currency, therapy is mandatory, and your daily dose of medication isn't just encouraged — it's celebrated. From Diagnosipops™ to Sadness Management Seminars, everyone's a proud patient. Feeling fine? You're clearly in denial.</p>
+    <p>Enter Hloux, a quiet skeptic with a suspiciously clean medical record. When a chance encounter with a rebellious soul named Noni exposes him to the glitch beneath the system's polished smile, Hloux begins to see the truth: They don't need to drug you — just convince you to medicate yourself.</p>
+    <p>Together they descend into the pharmaceutical funhouse, dodging Side-Effect Evangelists, Dopamine Influencers, and pill-pushing prophets. Beneath the synthetic joy and curated neuroses, something unmedicated is waking up... and it's not approved by the Council of Diagnostics™.</p>
+    <button class="cta-button" onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">Pre-order Now</button>
+  </section>
+
+  <section class="section" id="order">
+    <h2>How to Pre-order</h2>
+    <div class="order-box">
+      <p><strong>Price:</strong> R369 (excluding delivery)</p>
+      <p><strong>Payment Method:</strong> EFT Only</p>
+      <p><strong>Bank:</strong> Capitec Business<br>
+         <strong>Account Name:</strong> Lithako Edu and Sports<br>
+         <strong>Account Number:</strong> 1051 3359 06</p>
+      <p><strong>Reference:</strong> Your Full Name + <code>#TLH</code></p>
+      <p>Send proof of payment to: <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>What Readers Are Saying</h2>
+    <div class="testimonial">
+      <p><em>"I loved it, as it was very quirky, funny and thought-provoking."</em></p>
+    </div>
+    <div class="testimonial">
+      <p><em>"A brilliantly satirical romp through the neuroses of a truly unforgettable character. Each page had me laughing out loud, sometimes in disbelief, often in recognition. If you enjoy satire with a touch of madness, this is the perfect read."</em></p>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>About the Author</h2>
+    <div class="bio-box">
+      <p><strong>Ranneile Lesupi</strong>, Sports Coach & Business Visionary. A Storyteller at heart.</p>
+      <p>Ranneile Lesupi is a dynamic entrepreneur, creative force, and author whose ventures span across industry and imagination. As the creative lifeblood behind Ranneile Projects, he leads innovative initiatives that defy conventional categories.</p>
+      <p>Through Lithako Edu & Sports, he also physically coaches and mentors children aged 5–15, nurturing tomorrow’s champions both on the field and in their lives. In hospitality, his company Maqhubu Hospitality brings authentic warmth and elegance to every guest experience. He’s also the tech-savvy founder of Lelomotech, providing seamless Solar installations, proprietary Wi-Fi line and router connectivity. His fashion label, RuntaFit Apparel, blends style with purpose; all of this operates under the strategic guidance of his powerhouse holdings firm, House Of Nneile, where he excels as COO.</p>
+      <p>On the page and screen, Ranneile channels his storytelling gift of writing books, music, series, and screenplay that speak loudly to his community and beyond. His work is bold, real, lyrical and unapologetic. Every venture he leads is more than a project—it’s a statement.</p>
+    </div>
+  </section>
+
+  <section class="section">
+    <details class="faq">
+      <summary>⬇️ Shipping FAQs</summary>
+      <p><strong>Is delivery included in the price?</strong><br>
+      No, delivery is charged separately. You can choose between Pep Paxi, Pudo, or PostNet.</p>
+
+      <p><strong>Do you ship outside South Africa?</strong><br>
+      Yes, we offer worldwide shipping.</p>
+
+      <p><strong>When will I receive my book?</strong><br>
+      Orders will ship at the end of September 2025 once pre-orders close and hard copies are printed.</p>
+    </details>
+  </section>
+
+  <section class="section thank-you">
+    <h2>Thank You!</h2>
+    <p>Thank you for your interest in <em>The Loony Hypochondriacs</em>. Your support helps bring bold, fresh stories to life. We can't wait to deliver your copy soon!</p>
+  </section>
+
+  <section class="section countdown-timer">
+    <h2>Countdown to Release</h2>
+    <div class="countdown-box" id="countdown">
+      <span id="days">0 Days</span>
+      <span id="hours">0 Hours</span>
+      <span id="minutes">0 Minutes</span>
+      <span id="seconds">0 Seconds</span>
+    </div>
+  </section>
+
+  <section class="section contact-box">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
+       <strong>Phone:</strong> +27 67 265 6319<br>
+       <strong>Location:</strong> City of Matlosana</p>
+  </section>
+
+  <footer>
+    &copy; 2025 Lithako Edu. All rights reserved.
+  </footer>
+
+  <script>
+    const releaseDate = new Date(\"September 30, 2025 00:00:00\").getTime();
+    const countdown = () => {
+      const now = new Date().getTime();
+      const distance = releaseDate - now;
+      if (distance < 0) {
+        document.getElementById(\"countdown\").innerHTML = \"Now Shipping!\";
+        return;
+      }
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById(\"days\").innerText = days + \" Days\";
+      document.getElementById(\"hours\").innerText = hours + \" Hours\";
+      document.getElementById(\"minutes\").innerText = minutes + \" Minutes\";
+      document.getElementById(\"seconds\").innerText = seconds + \" Seconds\";
+    };
+    setInterval(countdown, 1000);
+  </script>
 </body>
 </html>
