--- a/index.html
+++ b/index.html
@@ -1,44 +1,91 @@
-/* NAVBAR HORIZONTAL STYLE */
-.navbar {
-  background: var(--dark-blue);
-  padding: 0.5rem 0;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to Lithako Edu & Sports</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-.navbar ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  margin: 0;
-  padding: 0;
-}
+  <!-- HEADER -->
+  <header>
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo">
+    <h1>Welcome to: Lithako Edu & Sports</h1>
+    <p>Empowering our young minds through education & sports</p>
+  </header>
 
-.navbar a {
-  color: var(--white);
-  font-weight: 600;
-  text-decoration: none;
-  padding: 0.6rem 1.2rem;
-  border-radius: var(--radius);
-  transition: background 0.3s, color 0.3s;
-}
+  <!-- NAVIGATION -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="books.html">Books</a></li>
+      <li><a href="tutoring.html">Tutoring</a></li>
+    </ul>
+  </nav>
 
-.navbar a:hover,
-.navbar a.active {
-  background: var(--blue);
-  color: var(--black);
-}
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <img src="elephant-banner.jpg" alt="Lithako Elephant Theme" class="hero-img">
+  </section>
 
-/* HERO IMAGE */
-.hero-img {
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
-  border-radius: 0 0 var(--radius) var(--radius);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-}
+  <!-- INTRODUCTION SECTION -->
+  <section class="section">
+    <h2>Our Mission</h2>
+    <p>
+      Our structured training programs are tailored for learners aged 5 to 15, combining academic support 
+      with high-performance sports development across Football, Basketball, Netball, Athletics, and more.
+    </p>
+    <p>
+      With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach 
+      their full potential—academically, physically, and mentally.
+    </p>
+    <p>
+      We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both 
+      in the classroom and on the field.
+    </p>
+    <p>
+      Through our balanced approach to education and sport, children learn discipline, respect, and resilience, 
+      which are values that will carry them far beyond the now.
+    </p>
+    <p><strong>Developing Complete athletes, because every child deserves a chance.</strong></p>
+  </section>
 
-/* LIGHT SECTION */
-.section.light {
-  background: var(--white);
-}
+  <!-- ABOUT SECTION -->
+  <section class="section light">
+    <h2>About Ranneile Lesupi</h2>
+    <p>
+      Ranneile Lesupi is a visionary coach and founder of Lithako Edu & Sports, dedicated to nurturing young talent through structured academic and athletic programs that inspire growth, confidence, and leadership.
+    </p>
+  </section>
+
+  <!-- BOOKS SECTION -->
+  <section class="section">
+    <h2>Our Explore Books</h2>
+    <p>Discover creative stories and publications that challenge thinking and inspire imagination.</p>
+    <button onclick="window.location.href='books.html'">📘 Visit Books</button>
+  </section>
+
+  <!-- TUTORING SECTION -->
+  <section class="section light">
+    <h2>Our Join Tutoring</h2>
+    <p>Enroll your child for personalized academic assistance and sports coaching today.</p>
+    <button onclick="window.location.href='tutoring.html'">🎓 Learn More</button>
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section class="section contact">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Phone:</strong> +27 67 265 6319</p>
+    <p><strong>Location:</strong> City of Matlosana</p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    &copy; 2025 Lithako Edu & Sports. All rights reserved.
+  </footer>
+
+</body>
+</html>
